raspberryPI3/ros2_ws/log/build_2023-12-03_15-35-33/trailer_angle_package/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/killian/Bureau/Projet_Voiture/TrailerMate/raspberryPI3/ros2_ws/install/trailer_angle_package/lib/python3.10/site-packages/trailer_angle_package/trailer_angle_node.py", line 26
    if PotentiometerData == ANGLE_ZERO 
                                       ^
SyntaxError: expected ':'

